# p2p_chat_lan

./: Cargo.toml  Dockerfile  EXAMPLE_SESSION.md  LEARNING_SUMMARY.md  P2P_CONCEPTS.md  README.md  demo.sh  quick_demo.sh  test.sh
.github/workflows/: release.yml
src/: cli.rs  error.rs  gui.rs  lib.rs  main.rs  peer.rs  signal.rs  walkie_talkie.rs
src/chat/net/: discovery.rs
src/network/: tcp.rs
src/walkie_talkie/: mod.rs
src/walkie_talkie/display/: cli.rs  message_display.rs
src/walkie_talkie/net/: broadcast.rs  discovery.rs  heartbeat.rs  listener.rs
tests/: network.rs
