[package]
name = "p2p-walkie-talkie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
mdns = "3.0"
local-ip-address = "0.5"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
